name:                arrayrep
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/arrayrep#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Harries
maintainer:          adam.harries@ed.ac.uk
copyright:           2017 Author name here
category:            DSL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable arrayrep-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arrayrep
  default-language:    Haskell2010

test-suite arrayrep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arrayrep
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/arrayrep
